--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -3,10 +3,12 @@
 
 :root {
     --primary: #fe2c55;
+    --text-color: #ccc;
 
     // DefaultLayout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --black: #000;
 }
 
 * {
@@ -23,4 +25,17 @@ body {
     font-family: 'Montserrat', sans-serif;
     font-size: 1.6rem;
     line-height: 1.5;
+    color: var(--black);
+}
+
+button,
+input,
+[tabindex] {
+    outline: none;
+    border: none;
+}
+
+a[href] {
+    color: var(--text-color);
+    text-decoration: none;
 }
