--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,9 @@
 .wrapper {
+    --search-height: 46px;
+    --search-separate-height: 28px;
+    --search-border: 1px solid rgba(22, 24, 35, 0.2);
+    --background-search-btn: rgba(22, 24, 35, 0.06);
+    --color-search-btn: rgb(22, 24, 35);
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 /12%);
     display: flex;
@@ -9,4 +14,84 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width, 1150px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+}
+
+.search {
+    position: relative;
+    width: 361px;
+    height: var(--search-height);
+    padding-left: 16px;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgba(22, 24, 35, 0.06);
+    border-radius: 92px;
+    border: 1px solid transparent;
+    caret-color: var(--primary);
+    input {
+        flex: 1;
+        height: 100%;
+        font-size: 1.6rem;
+        background-color: transparent;
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: var(--color-search-btn);
+    }
+
+    &::after {
+        position: absolute;
+        content: '';
+        width: 1px;
+        height: var(--search-separate-height);
+        background-color: rgba(22, 24, 35, 0.12);
+        right: 52px;
+        top: calc((var(--search-height) - var(--search-separate-height)) / 2);
+    }
+
+    &:focus-within {
+        border: var(--search-border);
+    }
+
+    &:hover {
+        border: var(--search-border);
+    }
+}
+
+.search:hover > .search-btn {
+    color: var(--color-search-btn);
+    background-color: var(--background-search-btn);
+}
+
+.clear,
+.loading {
+    position: absolute;
+    right: 52px;
+    top: 50%;
+    transform: translateY(-50%);
+    padding: 0 12px;
+    font-size: 16px;
+    color: rgba(22, 24, 35, 0.34);
+}
+
+.search-btn {
+    width: 52px;
+    height: 100%;
+    padding: 11px 16px 11px 12px;
+    background-color: transparent;
+    border-top-right-radius: 92px;
+    border-bottom-right-radius: 92px;
+    font-size: 1.8rem;
+    color: rgba(22, 24, 35, 0.34);
+
+    &:hover {
+        color: var(--color-search-btn);
+        background-color: var(--background-search-btn);
+        cursor: pointer;
+    }
 }
