--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -19,12 +19,13 @@
     justify-content: space-between;
 }
 
-.logo {
+.search,
+.search-result {
+    width: 361px;
 }
 
 .search {
     position: relative;
-    width: 361px;
     height: var(--search-height);
     padding-left: 16px;
     display: flex;
@@ -66,6 +67,14 @@
 .search:hover > .search-btn {
     color: var(--color-search-btn);
     background-color: var(--background-search-btn);
+}
+
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    line-height: 22px;
+    color: rgba(22, 24, 35, 0.75);
+    padding: 5px 12px 3px;
 }
 
 .clear,
