--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -3,11 +3,12 @@
 
 :root {
     --primary: #fe2c55;
-    --text-color: #ccc;
+    --text-color: #161823;
 
     // DefaultLayout
     --default-layout-header-height: 60px;
     --default-layout-width: 1150px;
+    --default-layout-horizontal-spacer: 24px;
     --black: #000;
     --white: #fff;
 }
@@ -37,6 +38,23 @@ input,
 }
 
 a[href] {
-    color: var(--text-color);
+    color: var(--black);
     text-decoration: none;
+}
+
+//Tippy
+.tippy-box {
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 2.1rem;
+    background-color: rgba(84, 84, 84, 0.92);
+}
+
+.tippy-box[data-placement^='bottom'] > .tippy-arrow:before {
+    top: -8px;
+}
+
+.tippy-arrow {
+    color: rgba(84, 84, 84, 0.92);
 }
