--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -14,6 +14,7 @@
 .inner {
     height: 100%;
     width: var(--default-layout-width, 1150px);
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -103,4 +104,41 @@
         background-color: var(--background-search-btn);
         cursor: pointer;
     }
+}
+
+//Action
+
+.actions {
+    display: flex;
+    align-items: center;
+}
+
+.more-btn {
+    font-size: 2rem;
+    margin-left: 16px;
+    padding: 0 20px;
+    background: transparent;
+}
+
+.action-btn {
+    background: transparent;
+    cursor: pointer;
+}
+
+.action-btn + .action-btn {
+    margin-left: 24px;
+}
+
+.icon {
+    width: 26px;
+    height: 26px;
+}
+
+.avatar {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-left: 24px;
+    cursor: pointer;
 }
