--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -10,6 +10,8 @@
     --default-layout-horizontal-spacer: 24px;
     --black: #000;
     --white: #fff;
+
+    --font-family: 'TikTokFont', sans-serif;
 }
 
 * {
@@ -23,7 +25,7 @@ html {
 }
 
 body {
-    font-family: 'TikTokFont', sans-serif;
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     color: var(--black);
