--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -9,6 +9,9 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    position: fixed;
+    z-index: 10;
+    background-color: var(--white);
 }
 
 .inner {
