--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -11,6 +11,11 @@
     padding-bottom: 8px;
 }
 
+// Menu scroll
+.menu-scrollable {
+    overflow-y: auto;
+}
+
 // Menu-item
 .menu-item {
     width: 100%;
@@ -34,6 +39,7 @@
     position: relative;
     height: 50px;
     margin-top: -8px;
+    flex-shrink: 0;
 }
 
 .back-btn {
