--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -5,4 +5,6 @@
     border-radius: 8px;
     padding-top: 8px;
     max-height: min((100vh - 96px) - 60px, 760px);
+    display: flex;
+    flex-direction: column;
 }
